Packages for RG350 and GCW0

--- a/Packaging/OpenDingux/control
+++ b/Packaging/OpenDingux/control
@@ -3,7 +3,7 @@ Version: 0.0.1
 Architecture: mipsel
 Section: games
 Maintainer: glex.spb@gmail.com
-Description: A port of DevilutionX for OpenDingux / RetroFW.
+Description: A port of DevilutionX for RetroFW.
 Priority: optional
 Homepage: https://github.com/diasurgical/devilutionX
 Depends:
