--- a/Packaging/OpenDingux/buildroot_rg350_defconfig
+++ b/Packaging/OpenDingux/buildroot_rg350_defconfig
@@ -10,6 +10,7 @@ BR2_BINUTILS_EXTRA_CONFIG_OPTIONS="--enable-lto"
 BR2_GCC_VERSION_4_9_X=y
 BR2_EXTRA_GCC_CONFIG_OPTIONS="--enable-lto"
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_PACKAGE_SDL2=y
 BR2_PACKAGE_SDL2_IMAGE=y
 BR2_PACKAGE_SDL2_IMAGE_PNG=y
 BR2_PACKAGE_SDL2_MIXER=y
