RG350 and RetroFW improvements
1. Use SDL1 for RG350 for performance
2. Document controls for both

--- a/Packaging/OpenDingux/buildroot_rg350_defconfig
+++ b/Packaging/OpenDingux/buildroot_rg350_defconfig
@@ -10,11 +10,9 @@ BR2_BINUTILS_EXTRA_CONFIG_OPTIONS="--enable-lto"
 BR2_GCC_VERSION_4_9_X=y
 BR2_EXTRA_GCC_CONFIG_OPTIONS="--enable-lto"
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
-BR2_PACKAGE_SDL2=y
-BR2_PACKAGE_SDL2_IMAGE=y
-BR2_PACKAGE_SDL2_IMAGE_PNG=y
-BR2_PACKAGE_SDL2_MIXER=y
-BR2_PACKAGE_SDL2_TTF=y
+BR2_PACKAGE_SDL=y
+BR2_PACKAGE_SDL_MIXER=y
+BR2_PACKAGE_SDL_TTF=y
 BR2_PACKAGE_ETNA_VIV=y
 BR2_PACKAGE_ETNA_VIV_ABIV4=y
 BR2_PACKAGE_MESA3D_ETNA_VIV=y
