--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -308,6 +308,7 @@ endforeach(def_name)
 foreach(
   def_name
   HAS_KBCTRL
+  DEFAULT_PLAYER_NAME
   KBCTRL_BUTTON_DPAD_LEFT
   KBCTRL_BUTTON_DPAD_RIGHT
   KBCTRL_BUTTON_DPAD_UP
@@ -347,6 +348,8 @@ foreach(
   JOY_BUTTON_RIGHTSTICK
   JOY_BUTTON_RIGHTSHOULDER
   JOY_BUTTON_LEFTSHOULDER
+  JOY_BUTTON_TRIGGERLEFT
+  JOY_BUTTON_TRIGGERRIGHT
   JOY_BUTTON_START
   JOY_BUTTON_BACK
 )
