RG350 and RetroFW improvements
1. Use SDL1 for RG350 for performance
2. Document controls for both

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -310,6 +310,7 @@ endforeach(def_name)
 foreach(
   def_name
   HAS_KBCTRL
+  DEFAULT_PLAYER_NAME
   KBCTRL_BUTTON_DPAD_LEFT
   KBCTRL_BUTTON_DPAD_RIGHT
   KBCTRL_BUTTON_DPAD_UP
@@ -349,6 +350,8 @@ foreach(
   JOY_BUTTON_RIGHTSTICK
   JOY_BUTTON_RIGHTSHOULDER
   JOY_BUTTON_LEFTSHOULDER
+  JOY_BUTTON_TRIGGERLEFT
+  JOY_BUTTON_TRIGGERRIGHT
   JOY_BUTTON_START
   JOY_BUTTON_BACK
 )
